--- a/src/pages/color/color.css
+++ b/src/pages/color/color.css
@@ -24,3 +24,12 @@
 	display: flex;
 	justify-content: space-around;
 }
+.ColorType{
+	margin-left: 100px;
+	font-size: 20px;
+	position: relative;
+	top: -30px;
+}
+.valueColor{
+	
+}
