--- a/src/pages/color/color.css
+++ b/src/pages/color/color.css
@@ -1,6 +1,68 @@
+@media only screen and (max-width: 805px){
+	.ColorTitle{
+		position: absolute;
+		top: 30px;
+		left: 30px;
+	}
+	.ColorText{
+		position: absolute;
+		margin-left: 5%;
+		width: 90%;
+		margin-right: 5%;
+		top: 13vh;
+	}
+	.optionsColorDiv{
+		width: 80%;
+		margin-left: 10%;
+		bottom: 83px;
+		position: absolute;
+	}
+	.ColorType{
+		text-align: center;
+	}
+	.colorPhotoDiv{
+		display: flex;
+ 	    flex-direction: column;
+    	justify-content: center;
+    	
+	}
+}
+@media only screen and (min-width: 806px){
+	.ColorText{
+		width: 70%;
+		position: relative;
+		top: -12vh;
+	}
+	.optionsColorDiv{
+		width: 50%;
+		position: relative;
+		top: -6vh;
+	}
+	.ColorTitle{
+		position: relative;
+		top: -12vh;
+	}
+	.ColorType{
+		
+		text-align: center;
+	}
+	.colorPhotoDiv{
+		display: flex;
+ 	    flex-direction: column;
+    	justify-content: center;
+
+	}
+}
+@media only screen and (min-width: 768px) and (max-width: 768px){
+	.colorDiv{
+		width: 50%;
+		background-color: #dcdcdc;
+	}
+}
+
 .colorDiv{
 	display: flex;
-	flex-direction: row;
+	flex-direction: row-reverse;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
@@ -15,21 +77,26 @@
 .ColorTitle{
 	font-size: 30px;
 }
-.colorText{
-	width: 70%;
+.ColorText{
 	color: #A8A8A8;
 }
 .optionsColorDiv{
-	width: 50%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 .ColorType{
-	margin-left: 100px;
 	font-size: 20px;
 	position: relative;
 	top: -30px;
 }
-.valueColor{
-	
+.colorImgCar{
+	width: 450px;
+	margin: 0 auto;
+}
+.pFinalValue{
+	font-size: 22px;
+}
+.categoriesFinal{
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
