--- a/src/pages/final/final.css
+++ b/src/pages/final/final.css
@@ -1,8 +1,41 @@
+@media only screen and (min-width: 770px){
+	.finalDiv{
+		margin: 0px 5%;
+		flex-direction: row;
+		justify-content: space-around;
+	}
+	.infoFinal{
+		width: 30%;
+	}
+}
+@media only screen and (max-width: 769px){
+	.finalDiv{
+		flex-direction: column;
+		justify-content: center;
+	}
+	.photoFinal{
+		width: 100%;
+		position: relative;
+top: 4vh;
+	}
+	.infoFinal{
+		width: 80%;
+		margin-left: 10%;
+		height: 50%;
+		position: relative;
+		top: -4vh;
+	}
+	.finalTitle{
+		width: 20px;
+		position: relative;
+		top: -33vh;
+	}
+}
+
+
 .finalDiv{
 	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	width: 100%;
+
 }
 .categoriesFinal{
 	display: flex;
@@ -10,9 +43,9 @@
 	flex-wrap: nowrap;
 	justify-content: space-between;
 }
-.infoFinal{
-	width: 30%;
-}
+
 .finalTitle{
 	width: 20px;
+	
+	font-size: 30px;
 }
