adicionado readME e slide horizontal na pagina de rodas

--- a/src/pages/home/footer.css
+++ b/src/pages/home/footer.css
@@ -47,6 +47,9 @@
 .nextButton{
 	font-size: 15px;
 }
+.nextButton:hover{
+	cursor: pointer;
+}
 .valorFooter{
 	font-size: 25px;
 	letter-spacing: 0.099em;
